crates/squawk_parser/src/snapshots/squawk_parser__test__close_ok.snap
---
source: crates/squawk_parser/src/test.rs
input_file: crates/squawk_parser/test_data/ok/close.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  CLOSE_STMT
    CLOSE_KW "close"
    WHITESPACE " "
    NAME
      IDENT "foo"
  SEMICOLON ";"
  WHITESPACE "\n"
  CLOSE_STMT
    CLOSE_KW "close"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n\n"
