crates/squawk_parser/src/snapshots/squawk_parser__test__create_function_err.snap
---
source: crates/squawk_parser/src/test.rs
input_file: crates/squawk_parser/test_data/err/create_function.sql
---
SOURCE_FILE
  COMMENT "-- regression partial definition"
  WHITESPACE "\n"
  CREATE_FUNCTION_STMT
    CREATE_KW "create"
    WHITESPACE " "
    FUNCTION_KW "function"
  WHITESPACE "\n"
---
ERROR@48: expected path name
ERROR@48: expected L_PAREN
